force-app/main/default/objects/Amendment__c/Amendment__c.object-meta.xml
<CustomObject>
    <label>Amendment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amendments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>