force-app/main/default/objects/Amendment__c/fields/AccountZID__c.field-meta.xml
<CustomField>
    <fullName>AccountZID__c</fullName>
    <label>AccountZID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>