force-app/main/default/objects/Amendment__c/fields/Appelation__c.field-meta.xml
<CustomField>
    <fullName>Appelation__c</fullName>
    <label>Appelation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>