force-app/main/default/objects/Amendment__c/fields/BaseSubscriptionZID__c.field-meta.xml
<CustomField>
    <fullName>BaseSubscriptionZID__c</fullName>
    <description>correspond à IdContratPrecedent__c dans zuora</description>
    <label>Base SubscriptionZID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>