force-app/main/default/objects/Amendment__c/fields/ChangeDescription__c.field-meta.xml
<CustomField>
    <fullName>ChangeDescription__c</fullName>
    <label>Change Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>