force-app/main/default/objects/Amendment__c/fields/NewSubscriptionZID__c.field-meta.xml
<CustomField>
    <fullName>NewSubscriptionZID__c</fullName>
    <label>New SubscriptionZID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>