force-app/main/default/objects/Amendment__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>valeurs possible :	
PassageU26
Migration
Resiliation
Desabonnement
Migration
Renouvellement
FinContrat
Retractation</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>