force-app/main/default/objects/Amendment__c/fields/SubscriptionName__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionName__c</fullName>
    <label>Subscription Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>